ebnf.txt
list = "list"  "{" expr* "}"
dict = "dict" "{" ((NUMBER | STRING | ID) "=" expr)* "}"
func = "func" "(" ID* ")" "{" stmt* "}"

func_call  = STICKY_PAREN_L expr* PAREN_R
field_call = "." (NUMBER | STRING | ID | STICKY_PAREN_L expr PAREN_R ")"

primary = "null" | BOOL | NUMBER | STRING | ID | list | dict | func | "(" expr ")"
call    = primary (func_call | field_call)*
unary   = call | ("!" | "-") unary

factor = unary  (("*" | "/" | "%") unary)*
term   = factor (("+" | "-") factor)*
comp   = term   ((">" | "<" | ">=" | "<=") term)*
eq     = comp   (("!=" | "==") comp)*
and    = eq     (("and") eq)*
or     = and    (("or") and)*
expr   = or

assig  = expr ("=" expr)?
decl   = "var" ID "=" expr
if     = "if" expr "{" stmt* "}"
for    = "for" ID "in" expr "{" stmt* "}"
while  = "while" expr "{" stmt* "}"
break  = "break"
return = "return" expr

stmt = assig | decl | if | for | while | break | return
